tests/compile-fail/reserved/try_match_empty.stderr
error: unexpected end of macro invocation
 --> tests/compile-fail/reserved/try_match_empty.rs:2:13
  |
2 |     let _ = try_match::try_match!();
  |             ^^^^^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
  |
note: while trying to match meta-variable `$r#in:expr`
 --> src/lib.rs
  |
  |     ($in:expr, $p:pat $(if $guard:expr)? => $out:expr $(,)?) => {
  |      ^^^^^^^^
